# ExotiaCore

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json.example
migration/: Cargo.toml
migration/src/: lib.rs  m20230415_125808_users_table.rs  m20230415_160925_survival_economy_table.rs  m20230415_163049_cosmetics_table.rs  m20230417_210219_wallet_table.rs  m20230417_213028_wallet_actions_table.rs  m20230424_185538_servers_table.rs  m20230604_183831_calendars_table.rs
src/: lib.rs  main.rs  server.rs
src/controllers/: auth.rs  mod.rs
src/controllers/calendars/: get.rs  mod.rs  rewards.rs  update.rs
src/controllers/servers/: economy.rs  economy_top.rs  get.rs  mod.rs
src/controllers/users/: auth.rs  create.rs  mod.rs  setup.rs  update.rs
src/controllers/wallet/: buy.rs  get.rs  mod.rs
src/entities/: calendars.rs  cosmetics.rs  mod.rs  prelude.rs  servers.rs  survival_economy.rs  users.rs  wallet.rs  wallet_actions.rs
src/handlers/: economy.rs  get_economy.rs  get_online.rs  get_wallet.rs  mod.rs  wallet_buy.rs
src/handlers/calendars/: get.rs  mod.rs  update.rs
src/handlers/public/: get_online.rs
src/handlers/servers/: economy.rs  get.rs  mod.rs
src/handlers/wallet/: buy.rs  get.rs
src/utils/: generate_token.rs  init.rs  mod.rs  serializers.rs  token.rs
src/websocket_handlers/: mod.rs
src/websocket_handlers/calendars/: rewards.rs
src/websocket_handlers/public/: mod.rs
src/websocket_handlers/servers/: economy.rs  economy_add.rs  mod.rs
src/websocket_handlers/wallet/: get.rs  mod.rs
